Another pass to clean up a little and look over things that still need doing